# rtype

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  imgui.ini  package-lock.json  server.log.config
client/: CMakeLists.txt
client/assets/: animations.json  assets.json
client/include/: ClientConfig.hpp  ClientRuntime.hpp  Main.hpp
client/include/animation/: AnimationLabels.hpp  AnimationManifest.hpp  AnimationRegistry.hpp
client/include/assets/: AssetLoader.hpp  AssetManifest.hpp
client/include/audio/: SoundManager.hpp
client/include/auth/: AuthResult.hpp
client/include/components/: AnimationComponent.hpp  AudioComponent.hpp  BackgroundScrollComponent.hpp  BossComponent.hpp  BoxComponent.hpp  ButtonComponent.hpp  CameraComponent.hpp  ChargeMeterComponent.hpp  ColliderComponent.hpp  DirectionalAnimationComponent.hpp  FocusableComponent.hpp  FollowerFacingComponent.hpp  InputFieldComponent.hpp  InputHistoryComponent.hpp  InterpolationComponent.hpp  LayerComponent.hpp  NetworkStatsComponent.hpp  SpriteComponent.hpp  TextComponent.hpp
client/include/errors/: AssetLoadError.hpp  AudioError.hpp  FileNotFoundError.hpp  ManifestParseError.hpp  NetworkSendError.hpp  RenderError.hpp
client/include/events/: AudioEvents.hpp  GameEvents.hpp  RenderEvents.hpp  UIEvents.hpp
client/include/graphics/: ColorFilter.hpp  FontManager.hpp  GraphicsFactory.hpp  Sprite.hpp  TextureManager.hpp  Window.hpp
client/include/helpers/: InterpolationController.hpp
client/include/input/: InputBuffer.hpp  InputMapper.hpp  InputSystem.hpp  KeyBindings.hpp
client/include/level/: EntityTypeRegistry.hpp  EntityTypeSetup.hpp  LevelState.hpp
client/include/network/: ClientInit.hpp  EndpointParser.hpp  LevelEventParser.hpp  LevelInitData.hpp  LevelInitParser.hpp  LobbyConnection.hpp  LobbyPackets.hpp  NetworkMessageHandler.hpp  NetworkReceiver.hpp  NetworkSender.hpp  SnapshotParser.hpp
client/include/rollback/: ClientRollbackHandler.hpp  ClientStateHistory.hpp
client/include/runtime/: MenuMusic.hpp
client/include/scheduler/: ClientScheduler.hpp  GameLoop.hpp
client/include/systems/: AnimationSystem.hpp  AudioSystem.hpp  BackgroundScrollSystem.hpp  ButtonSystem.hpp  CameraSystem.hpp  DirectionalAnimationSystem.hpp  FollowerFacingSystem.hpp  GameOverSystem.hpp  HUDSystem.hpp  HitboxDebugSystem.hpp  InputFieldSystem.hpp  InterpolationSystem.hpp  IntroCinematicSystem.hpp  InvincibilitySystem.hpp  LevelEventSystem.hpp  LevelInitSystem.hpp  NetworkDebugOverlay.hpp  NetworkMessageSystem.hpp  NetworkStatsSystem.hpp  NotificationSystem.hpp  ReconciliationSystem.hpp  RenderSystem.hpp  ReplicationSystem.hpp
client/include/ui/: ConnectionMenu.hpp  CreateRoomMenu.hpp  GameOverMenu.hpp  IMenu.hpp  LobbyMenu.hpp  LobbyMenuRanked.hpp  LoginMenu.hpp  MenuRunner.hpp  ModeSelectMenu.hpp  NotificationData.hpp  PasswordInputMenu.hpp  PauseMenu.hpp  ProfileMenu.hpp  RegisterMenu.hpp  RoomDifficulty.hpp  RoomWaitingMenu.hpp  RoomWaitingMenuRanked.hpp  SettingsMenu.hpp  WaitingRoomMenu.hpp
client/src/: Client.cpp  ClientConfig.cpp  ClientRuntime.cpp  Main.cpp
client/src/animation/: AnimationManifest.cpp  AnimationRegistry.cpp
client/src/assets/: AssetLoader.cpp  AssetManifest.cpp
client/src/audio/: SoundManager.cpp
client/src/components/: AnimationComponent.cpp  InterpolationComponent.cpp  SpriteComponent.cpp
client/src/graphics/: FontManager.cpp  GraphicsFactory.cpp  Sprite.cpp  TextureManager.cpp  Window.cpp
client/src/helpers/: InterpolationController.cpp
client/src/input/: InputBuffer.cpp  InputMapper.cpp  InputSystem.cpp
client/src/level/: EntityTypeRegistry.cpp  EntityTypeSetup.cpp
client/src/network/: ClientInit.cpp  EndpointParser.cpp  LevelEventParser.cpp  LevelInitParser.cpp  LobbyConnection.cpp  LobbyPackets.cpp  NetworkMessageHandler.cpp  NetworkReceiver.cpp  NetworkSender.cpp  SnapshotParser.cpp
client/src/rollback/: ClientRollbackHandler.cpp
client/src/runtime/: ClientLoop.cpp  ClientWindow.cpp  ConnectionFlow.cpp  MenuMusic.cpp  NetworkSetup.cpp  RunClientFlow.cpp  SystemsConfig.cpp
client/src/scheduler/: ClientScheduler.cpp  GameLoop.cpp
client/src/systems/: AnimationSystem.cpp  AudioSystem.cpp  BackgroundScrollSystem.cpp  ButtonSystem.cpp  CameraSystem.cpp  DirectionalAnimationSystem.cpp  FollowerFacingSystem.cpp  GameOverSystem.cpp  HUDSystem.cpp  HitboxDebugSystem.cpp  InputFieldSystem.cpp  InterpolationSystem.cpp  IntroCinematicSystem.cpp  InvincibilitySystem.cpp  LevelEventSystem.cpp  LevelInitSystem.cpp  NetworkDebugOverlay.cpp  NetworkMessageSystem.cpp  NetworkStatsSystem.cpp  NotificationSystem.cpp  ReconciliationSystem.cpp  RenderSystem.cpp  ReplicationSystem.cpp
client/src/ui/: ConnectionMenu.cpp  CreateRoomMenu.cpp  GameOverMenu.cpp  LobbyMenu.cpp  LobbyMenuRanked.cpp  LoginMenu.cpp  MenuRunner.cpp  ModeSelectMenu.cpp  PasswordInputMenu.cpp  PauseMenu.cpp  ProfileMenu.cpp  RegisterMenu.cpp  RoomWaitingMenu.cpp  RoomWaitingMenuRanked.cpp  SettingsMenu.cpp  WaitingRoomMenu.cpp
editor/: CMakeLists.txt
editor/include/editor/: ImGuiSFML.hpp  LevelEditor.hpp
editor/src/: ImGuiSFML.cpp  LevelEditor.cpp  Main.cpp
server/: CMakeLists.txt
server/assets/levels/: level_1.json
server/include/: Main.hpp
server/include/auth/: AuthService.hpp  Database.hpp  User.hpp  UserRepository.hpp
server/include/console/: ServerConsole.hpp
server/src/: EntityTypeResolver.cpp  GameInstance.cpp  GameInstanceHandlers.cpp  GameInstanceManager.cpp  GameInstanceRollback.cpp  GameInstanceTick.cpp  IntroCinematic.cpp  LevelDirector.cpp  LevelLoader.cpp  LevelPackets.cpp  LevelSpawnSystem.cpp  LobbyManager.cpp  LobbyPackets.cpp  LobbyServer.cpp  Main.cpp  Server.cpp  ServerHandlers.cpp  ServerRunner.cpp  ServerTick.cpp  Session.cpp  SnapshotPackets.cpp  SpawnConfig.cpp  WaveLibrary.cpp
tests/: CMakeLists.txt  mock_server.py  test_server.py
tests/client/: CMakeLists.txt  ClientTests.cpp
tests/server/: CMakeLists.txt  ServerTests.cpp
tests/shared/: CMakeLists.txt  JsonTests.cpp  SharedTests.cpp
(+510 files in other folders)
